added main entities, DTOs, services, controllers, mappers, exceptions as well as registration, authorization, authentication and logout features